languages/io-automaton-fe/src/test/resources/invalid/AmbiguousMatching.ioautomaton
package invalid;

automaton AmbiguousMatching {

    input String i;    
    variable int s;    
    output int a;

	state Idle;	
	
	// This is wrong, because we can't find a match in variables or 
	// outputs for a String type
	initial Idle / {"Wrong"};
	
	// Stimulus is right, because only i matches String. The rReaction is 
	// wrong because we have more than one match for an int type
	Idle {"Right"} / {5};
}